--- a/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
@@ -1094,6 +1094,6 @@ Please contact us at support@ip.sx if you have any queries about these Special T
         <image name="walletLarge" width="51" height="51.666667938232422"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eio-mW-33N"/>
+        <segue reference="ihi-aI-Uea"/>
     </inferredMetricsTieBreakers>
 </document>
