--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -233,11 +233,21 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pmp-AI-8g6" userLabel="Separator">
+                                            <rect key="frame" x="0.0" y="60.333333333333336" width="375" height="0.6666666666666643"/>
+                                            <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.6666666666666714" id="Kih-m1-lCG"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="cHX-jl-3ba" firstAttribute="leading" secondItem="gED-ZW-W1m" secondAttribute="leading" constant="15" id="6av-mh-LwX"/>
                                         <constraint firstAttribute="bottom" secondItem="cHX-jl-3ba" secondAttribute="bottom" constant="15" id="CKk-Wu-vUt"/>
+                                        <constraint firstItem="pmp-AI-8g6" firstAttribute="leading" secondItem="gED-ZW-W1m" secondAttribute="leading" id="RRQ-UT-bnl"/>
+                                        <constraint firstAttribute="bottom" secondItem="pmp-AI-8g6" secondAttribute="bottom" id="gvo-7h-xVm"/>
+                                        <constraint firstAttribute="trailing" secondItem="pmp-AI-8g6" secondAttribute="trailing" id="lo1-SK-ugm"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
@@ -249,19 +259,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refund #30" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="evE-5n-wDv">
-                                                    <rect key="frame" x="15" y="15" width="76" height="17"/>
+                                                    <rect key="frame" x="15" y="14" width="76" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issued by" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njx-Ce-cLp">
-                                                    <rect key="frame" x="269" y="15" width="62" height="17"/>
+                                                    <rect key="frame" x="269" y="14" width="62" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCt-v4-UbB">
-                                                    <rect key="frame" x="334" y="15" width="26" height="17"/>
+                                                    <rect key="frame" x="334" y="14" width="26" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -273,26 +283,26 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Tn-6I-PpF">
-                                                    <rect key="frame" x="75" y="41" width="19" height="18"/>
+                                                    <rect key="frame" x="78" y="41" width="19" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                     <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ipsxIcon" translatesAutoresizingMaskIntoConstraints="NO" id="7cU-am-2V8">
-                                                    <rect key="frame" x="96" y="44.666666666666664" width="11" height="11"/>
+                                                    <rect key="frame" x="99" y="44.666666666666664" width="11" height="11"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="11" id="2MH-ox-P4n"/>
                                                         <constraint firstAttribute="width" constant="11" id="pfA-Yh-e37"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13 Apr 2018   08:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chN-uP-9Cq">
-                                                    <rect key="frame" x="15" y="58" width="127" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <rect key="frame" x="14.999999999999993" y="60.333333333333336" width="119.33333333333331" height="15.666666666666664"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R38-us-5Rh" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="285" y="47" width="75" height="20"/>
+                                                    <rect key="frame" x="285" y="49" width="75" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="COMPLETED" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Tz-hx-yeY">
@@ -311,7 +321,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lwe-4A-kgs" userLabel="Canceled View" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="285" y="47" width="75" height="20"/>
+                                                    <rect key="frame" x="285" y="49" width="75" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CANCELED" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6jt-Fd-7UA">
@@ -330,7 +340,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uWe-l0-iKn" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="302" y="47" width="58" height="20"/>
+                                                    <rect key="frame" x="302" y="49" width="58" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PENDING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGl-07-WLg">
@@ -349,7 +359,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B6J-Xz-yk4" userLabel="Expired" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="302" y="47" width="58" height="20"/>
+                                                    <rect key="frame" x="302" y="49" width="58" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="EXPIRED" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dtu-Wh-9Ml">
@@ -377,7 +387,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="7cU-am-2V8" firstAttribute="leading" secondItem="4Tn-6I-PpF" secondAttribute="trailing" constant="2" id="1e3-DH-ggo"/>
-                                                <constraint firstItem="4Tn-6I-PpF" firstAttribute="leading" secondItem="tHy-5o-pEE" secondAttribute="trailing" constant="2" id="34R-c8-TqT"/>
+                                                <constraint firstItem="4Tn-6I-PpF" firstAttribute="leading" secondItem="tHy-5o-pEE" secondAttribute="trailing" constant="5" id="34R-c8-TqT"/>
                                                 <constraint firstItem="tHy-5o-pEE" firstAttribute="leading" secondItem="Ayw-TZ-3eV" secondAttribute="leading" constant="15" id="Abt-W4-8tD"/>
                                                 <constraint firstItem="njx-Ce-cLp" firstAttribute="centerY" secondItem="rCt-v4-UbB" secondAttribute="centerY" id="EAJ-hs-Szi"/>
                                                 <constraint firstItem="7cU-am-2V8" firstAttribute="centerY" secondItem="4Tn-6I-PpF" secondAttribute="centerY" id="FEI-JI-2AF"/>
@@ -385,11 +395,11 @@
                                                 <constraint firstAttribute="trailing" secondItem="rCt-v4-UbB" secondAttribute="trailing" constant="15" id="IKc-Er-NYo"/>
                                                 <constraint firstItem="rCt-v4-UbB" firstAttribute="leading" secondItem="njx-Ce-cLp" secondAttribute="trailing" constant="3" id="JBU-QO-LgQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ys5-wA-l1o" secondAttribute="trailing" id="NZF-sL-Z4w"/>
-                                                <constraint firstAttribute="bottom" secondItem="chN-uP-9Cq" secondAttribute="bottom" constant="15" id="bgq-6H-8Ya"/>
+                                                <constraint firstAttribute="bottom" secondItem="chN-uP-9Cq" secondAttribute="bottom" constant="14" id="bgq-6H-8Ya"/>
                                                 <constraint firstAttribute="bottom" secondItem="Ys5-wA-l1o" secondAttribute="bottom" id="cJG-JJ-HR3"/>
                                                 <constraint firstItem="rCt-v4-UbB" firstAttribute="centerY" secondItem="evE-5n-wDv" secondAttribute="centerY" id="cQl-jp-ZDn"/>
                                                 <constraint firstItem="evE-5n-wDv" firstAttribute="leading" secondItem="Ayw-TZ-3eV" secondAttribute="leading" constant="15" id="ono-fc-U49"/>
-                                                <constraint firstItem="evE-5n-wDv" firstAttribute="top" secondItem="Ayw-TZ-3eV" secondAttribute="top" constant="15" id="rAR-TL-TSL"/>
+                                                <constraint firstItem="evE-5n-wDv" firstAttribute="top" secondItem="Ayw-TZ-3eV" secondAttribute="top" constant="14" id="rAR-TL-TSL"/>
                                                 <constraint firstItem="4Tn-6I-PpF" firstAttribute="centerY" secondItem="tHy-5o-pEE" secondAttribute="centerY" id="rHS-GQ-c5u"/>
                                                 <constraint firstItem="Ys5-wA-l1o" firstAttribute="leading" secondItem="Ayw-TZ-3eV" secondAttribute="leading" id="sGo-6u-FGz"/>
                                                 <constraint firstItem="chN-uP-9Cq" firstAttribute="leading" secondItem="Ayw-TZ-3eV" secondAttribute="leading" constant="15" id="sb5-GA-yD6"/>
