--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -77,9 +77,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qno-EN-Cxf" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="756"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YPG-1n-swD" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YPG-1n-swD" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
                                                 <rect key="frame" x="14" y="26" width="348" height="66"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EditProfile" translatesAutoresizingMaskIntoConstraints="NO" id="juy-hB-F2i">
                                                         <rect key="frame" x="19" y="18" width="29" height="30"/>
@@ -102,6 +101,9 @@
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="66" id="9fT-XX-yHW"/>
+                                                </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -109,9 +111,8 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3E1-3i-z73" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3E1-3i-z73" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
                                                 <rect key="frame" x="14" y="102" width="348" height="66"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="keyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="XmE-yz-7Zq">
                                                         <rect key="frame" x="19" y="18" width="29" height="30"/>
@@ -134,6 +135,9 @@
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="66" id="P4T-FZ-jEj"/>
+                                                </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -141,9 +145,8 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uHp-Mz-SEW" userLabel="Type of User View">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uHp-Mz-SEW" userLabel="Type of User View">
                                                 <rect key="frame" x="0.0" y="172" width="375" height="314"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type of User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQf-aP-NBP">
                                                         <rect key="frame" x="15" y="20" width="108" height="21"/>
@@ -286,10 +289,22 @@
                                                     </view>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="314" id="aQW-u9-eYx"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="YPG-1n-swD" firstAttribute="top" secondItem="qno-EN-Cxf" secondAttribute="top" constant="26" id="2nd-Ai-LUL"/>
+                                            <constraint firstItem="3E1-3i-z73" firstAttribute="leading" secondItem="YPG-1n-swD" secondAttribute="leading" id="79p-Ay-jr7"/>
+                                            <constraint firstItem="uHp-Mz-SEW" firstAttribute="leading" secondItem="qno-EN-Cxf" secondAttribute="leading" id="A46-MJ-Qs1"/>
+                                            <constraint firstAttribute="trailing" secondItem="uHp-Mz-SEW" secondAttribute="trailing" id="Sf1-tT-37I"/>
+                                            <constraint firstItem="uHp-Mz-SEW" firstAttribute="top" secondItem="3E1-3i-z73" secondAttribute="bottom" constant="4" id="TkZ-xc-dCG"/>
+                                            <constraint firstItem="3E1-3i-z73" firstAttribute="top" secondItem="YPG-1n-swD" secondAttribute="bottom" constant="10" id="b61-x8-FPx"/>
+                                            <constraint firstAttribute="trailing" secondItem="YPG-1n-swD" secondAttribute="trailing" constant="13" id="ezX-Ow-PN5"/>
+                                            <constraint firstItem="3E1-3i-z73" firstAttribute="trailing" secondItem="YPG-1n-swD" secondAttribute="trailing" id="l1C-tl-ot0"/>
+                                            <constraint firstItem="YPG-1n-swD" firstAttribute="leading" secondItem="qno-EN-Cxf" secondAttribute="leading" constant="14" id="mgn-yn-vtM"/>
                                             <constraint firstAttribute="height" constant="756" id="nUE-jp-x0y"/>
                                         </constraints>
                                     </view>
@@ -332,6 +347,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="MOe-bb-j0w"/>
                     <connections>
+                        <outlet property="changePasswordHeight" destination="P4T-FZ-jEj" id="HKF-e4-Uwv"/>
                         <outlet property="changePasswordHolderView" destination="3E1-3i-z73" id="O2L-kb-vKB"/>
                         <outlet property="companyApproveLabel" destination="lps-1F-ms7" id="wr1-hV-nAR"/>
                         <outlet property="companyCheckmarkImage" destination="NrN-ug-Mjh" id="gHC-eF-7vM"/>
